# lerobot-humanoid-runtime

./: .gitignore  .gitmodules  AGENT.md  ARCHITECTURE_CLASS_DIAGRAM.md  CALIBRATION.md  README.md  RELEASE_READINESS_AUDIT.md  ipython_helper.py  pyproject.toml
apps/: gamepad_controller.py
control/: RL_agent_isolated.py  __init__.py  rl_agent.py
control/policy/: robot.xml
control/policy/claude_iteration/: config.yaml  debug_ctrl5.csv  policy.onnx
control/policy/codex_iteration/: config.yaml  policy.onnx
control/policy/codex_iteration_10/: config.yaml  policy.onnx
control/policy/codex_iteration_11/: config.yaml  policy.onnx
control/policy/codex_iteration_12/: config.yaml  gain.md  policy.onnx
control/policy/codex_iteration_3/: config.yaml  debug_ctrl5.csv  (+1 more)
deploy/: __init__.py  common.py  run_real_policy.py  run_real_policy_sequential.py  run_real_policy_sequential_2.py
docs/: ZQWL_Linux_SDK调研.md  使用指南.md
hardware/: __init__.py  bipdeal_config.py  bipedal_robot.py  mit_codec.py  robstride_toolkit.py
imu/: IMU_BNO055  IMU_JY901.py  IMU_integration.py  __init__.py
lerobot_humanoid_lerobot_integration/: __init__.py  config_lerobot_humanoid.py  lerobot_humanoid.py  robstride_mock_bus.py
robot/: __init__.py  bipdeal_config.py  bipedal_robot.py  root_constant.py  sim_robot.py  zqwl_serial_bus.py
scripts/: diagnose_can.sh  pi_finish_install.sh  start_policy_on_pi.sh  test_zqwl_device.py
tools/: convert_isaac_config_to_rlagent.py  data_acquisition.py  plot_policy_real_sim_frequency.py  run_sim_policy.py  scan_motors_zqwl.py  test_zqwl_bus.py
(+456 files in other folders)
